Fixed missing date on hopkins job and removed the unfilledout publications section

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ themselves to other demographics.</li>
 <h3>Data Science Researcher</h3>
 <p>Johns Hopkins Data Science Lab</p>
 <p>Baltimore, MD</p>
+<p>2017</p>
 <ul>
 <li>Building R Shiny applications in the contexts of wearables and statistics education.</li>
 <li>Work primarily done in R Shiny and Javascript (node and d3js).</li>
@@ -237,10 +238,9 @@ themselves to other demographics.</li>
 <li>Designed from bottom up course to teach advanced methods for enhancing visualization.</li>
 <li>Uses python, matplotlib, and seaborn.</li>
 </ul>
+<!-- Selected Publications and Posters {data-icon=file} -->
+<!-- -------------------------------------------------------------------------------- -->
 </div>
-</div>
-<div id="selected-publications-and-posters" class="section level2" data-icon="file">
-<h2>Selected Publications and Posters</h2>
 </div>
 </div>
 
