Updated with link to source

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 </div>
 <div id="disclaimer" class="section level2">
 <h2>Disclaimer</h2>
-<p>This CV was made with the R package <a href="https://github.com/rstudio/pagedown"><strong>pagedown</strong></a>.</p>
+<p>Made with the R package <a href="https://github.com/rstudio/pagedown"><strong>pagedown</strong></a>.</p>
+<p>The source code is available at <a href="https://github.com/nstrayer/cv">github.com/nstrayer/cv</a>.</p>
 <p>Last updated on 2019-07-22.</p>
 </div>
 </div>
