Started replacing the hard coded sections with positions encoded in lists of lists so I can more easily customize appearance in future.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Nick Strayer" />
-    <meta name="date" content="2019-07-22" />
+    <meta name="date" content="2019-09-26" />
     <title>Nick Strayer’s CV</title>
 
         <link href="index_files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
@@ -49,7 +49,7 @@
 <h2>Disclaimer</h2>
 <p>Made with the R package <a href="https://github.com/rstudio/pagedown"><strong>pagedown</strong></a>.</p>
 <p>The source code is available at <a href="https://github.com/nstrayer/cv">github.com/nstrayer/cv</a>.</p>
-<p>Last updated on 2019-07-22.</p>
+<p>Last updated on 2019-09-26.</p>
 </div>
 </div>
 <div id="main" class="section level1">
@@ -60,54 +60,53 @@
 </div>
 <div id="education" class="section level2" data-icon="graduation-cap" data-concise="true">
 <h2>Education</h2>
-<div id="university-of-vermont" class="section level3">
-<h3>University of Vermont</h3>
-<p>B.S., mathematics, statistics</p>
-<p>Burlington, VT</p>
-<p>2011 - 2015</p>
-<p>Minored in computer science</p>
-<p>Thesis: An agent based model of Diel Vertical Migration patterns of Mysis diluviana</p>
-</div>
 <div id="vanderbilt-university" class="section level3">
 <h3>Vanderbilt University</h3>
 <p>PhD. Candidate, biostatistics</p>
 <p>Nashville, TN</p>
-<p>2015 - 2020</p>
-<p>Dissertation on Bayesian network model fitting and visualization</p>
+<p>2020 - 2015</p>
+<p>Dissertation on Bayesian network models and interactive biomedical visualization platforms</p>
 <p>University Graduate Fellow</p>
+</div>
+<div id="university-of-vermont" class="section level3">
+<h3>University of Vermont</h3>
+<p>B.S., mathematics, statistics</p>
+<p>Burlington, VT</p>
+<p>2015 - 2011</p>
+<p>Minored in computer science</p>
+<p>Thesis: An agent based model of Diel Vertical Migration patterns of Mysis diluviana</p>
 </div>
 </div>
 <div id="research-experience" class="section level2" data-icon="laptop">
 <h2>Research Experience</h2>
-<div id="research-assistant" class="section level3">
-<h3>Research Assistant</h3>
-<p>Adair Laboratory</p>
-<p>University of Vermont</p>
-<p>2012 - 2013</p>
+<div id="graduate-research-assistant" class="section level3">
+<h3>Graduate Research Assistant</h3>
+<p>TBILab (Yaomin Xu’s Lab)</p>
+<p>Vanderbilt University</p>
+<p>2020 - 2015</p>
 <ul>
-<li>Independently analyzed and constructed statistical models for large data sets pertaining to carbon
-decomposition rates.</li>
+<li>Primarilly working with large EHR and Biobank datasets.</li>
+<li>Developing network-based methods to investigate and visualize clinically relevant patterns in data.</li>
+</ul>
+</div>
+<div id="data-science-researcher" class="section level3">
+<h3>Data Science Researcher</h3>
+<p>Data Science Lab</p>
+<p>Johns Hopkins University</p>
+<p>2018 - 2017</p>
+<ul>
+<li>Building R Shiny applications in the contexts of wearables and statistics education.</li>
+<li>Work primarily done in R Shiny and Javascript (node and d3js).</li>
 </ul>
 </div>
 <div id="undergraduate-researcher" class="section level3">
 <h3>Undergraduate Researcher</h3>
-<p>Bentil Laboratory</p>
-<p>University of Vermont</p>
-<p>2013 - 2014</p>
-<ul>
-<li>Developing mathematical model to predict the transport of sulfur through the environment with
-applications in waste cleanup.</li>
-</ul>
-</div>
-<div id="undergraduate-researcher-1" class="section level3">
-<h3>Undergraduate Researcher</h3>
 <p>Rubenstein Ecosystems Science Laboratory</p>
 <p>University of Vermont</p>
-<p>2013 - 2015</p>
+<p>2015 - 2013</p>
 <ul>
 <li>Analyzed and visualized data for CATOS fish tracking project.</li>
-<li>Head of data mining project to establish temporal trends in population densities of Mysis diluviana
-(Mysis).</li>
+<li>Head of data mining project to establish temporal trends in population densities of Mysis diluviana (Mysis).</li>
 <li>Ran project to mathematically model the migration patterns of Mysis (honors thesis project.)</li>
 </ul>
 </div>
@@ -117,70 +116,30 @@ applications in waste cleanup.</li>
 <p>University of Michigan</p>
 <p>2015</p>
 <ul>
-<li>Led development and implementation of interactive data visualizations to help users compare
-themselves to other demographics.</li>
+<li>Led development and implementation of interactive data visualizations to help users compare themselves to other demographics.</li>
 </ul>
 </div>
-<div id="graduate-research-assistant" class="section level3">
-<h3>Graduate Research Assistant</h3>
-<p>TBILab</p>
-<p>Vanderbilt University Medical Center</p>
-<p>2015 - 2020</p>
+<div id="undergraduate-researcher-1" class="section level3">
+<h3>Undergraduate Researcher</h3>
+<p>Bentil Laboratory</p>
+<p>University of Vermont</p>
+<p>2014 - 2013</p>
 <ul>
-<li>Primarilly working with large EHR and Biobank datasets.</li>
-<li>Developing network-based methods to investigate and visualize clinically relevant patterns in data.</li>
+<li>Developed mathematical model to predict the transport of sulfur through the environment with applications in waste cleanup.</li>
 </ul>
 </div>
-<div id="data-science-researcher" class="section level3">
-<h3>Data Science Researcher</h3>
-<p>Johns Hopkins Data Science Lab</p>
-<p>Baltimore, MD</p>
-<p>2017</p>
+<div id="research-assistant" class="section level3">
+<h3>Research Assistant</h3>
+<p>Adair Laboratory</p>
+<p>University of Vermont</p>
+<p>2013 - 2012</p>
 <ul>
-<li>Building R Shiny applications in the contexts of wearables and statistics education.</li>
-<li>Work primarily done in R Shiny and Javascript (node and d3js).</li>
+<li>Independently analyzed and constructed statistical models for large data sets pertaining to carbon decomposition rates.</li>
 </ul>
 </div>
 </div>
 <div id="industry-experience" class="section level2" data-icon="suitcase">
 <h2>Industry Experience</h2>
-<div id="software-engineering-intern" class="section level3">
-<h3>Software Engineering Intern</h3>
-<p>Conduce</p>
-<p>Carpinteria, CA</p>
-<p>2014</p>
-<ul>
-<li>Incorporated d3.js to the company’s main software platform.</li>
-</ul>
-</div>
-<div id="engineering-intern---user-experience" class="section level3">
-<h3>Engineering Intern - User Experience,</h3>
-<p>Dealer.com</p>
-<p>Burlington, VT</p>
-<p>2015</p>
-<ul>
-<li>Worked to help analyze and visualize user interaction with backend products.</li>
-</ul>
-</div>
-<div id="data-science-intern" class="section level3">
-<h3>Data Science Intern,</h3>
-<p>Dealer.com</p>
-<p>Burlington, VT</p>
-<p>2015</p>
-<ul>
-<li>Worked with the product analytics team to help parse and visualize large stores of data.</li>
-</ul>
-</div>
-<div id="data-artist-in-residence" class="section level3">
-<h3>Data Artist In Residence</h3>
-<p>Conduce</p>
-<p>Carpinteria, CA</p>
-<p>2014 - 2015</p>
-<ul>
-<li>Envisioned, prototyped and implemented visualization framework in the course of one month.</li>
-<li>Constructed training protocol for bringing third parties up to speed with new protocol.</li>
-</ul>
-</div>
 <div id="data-journalist---graphics-department" class="section level3">
 <h3>Data Journalist - Graphics Department</h3>
 <p>New York Times</p>
@@ -189,6 +148,44 @@ themselves to other demographics.</li>
 <ul>
 <li>Reporter with the graphics desk covering topics in science, politics, and sport.</li>
 <li>Work primarily done in R, Javascript, and Adobe Illustrator.</li>
+<li>Had most read and discussed article for entire paper for month of August, 2016.</li>
+</ul>
+</div>
+<div id="engineering-intern---user-experience" class="section level3">
+<h3>Engineering Intern - User Experience</h3>
+<p>Dealer.com</p>
+<p>Burlington, VT</p>
+<p>2015</p>
+<ul>
+<li>Built internal tool to help analyze and visualize user interaction with backend products.</li>
+</ul>
+</div>
+<div id="data-science-intern" class="section level3">
+<h3>Data Science Intern</h3>
+<p>Dealer.com</p>
+<p>Burlington, VT</p>
+<p>2015</p>
+<ul>
+<li>Worked with the product analytics team to help parse and visualize large stores of data to drive business decisions.</li>
+</ul>
+</div>
+<div id="data-artist-in-residence" class="section level3">
+<h3>Data Artist In Residence</h3>
+<p>Conduce</p>
+<p>Carpinteria, CA</p>
+<p>2015 - 2014</p>
+<ul>
+<li>Envisioned, prototyped and implemented visualization framework in the course of one month.</li>
+<li>Constructed training protocol for bringing third parties up to speed with new protocol.</li>
+</ul>
+</div>
+<div id="software-engineering-intern" class="section level3">
+<h3>Software Engineering Intern</h3>
+<p>Conduce</p>
+<p>Carpinteria, CA</p>
+<p>2014</p>
+<ul>
+<li>Incorporated d3.js to the company’s main software platform.</li>
 </ul>
 </div>
 </div>
