made changes to personalize and troubleshoot issues

--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta name="author" content="Scarlett Winters" />
-    <meta name="date" content="2019-10-11" />
-    <title>Scarlett Winter’s Resume&quot;</title>
+    <meta name="date" content="2019-10-12" />
+    <title>Scarlett Winters’ Resume&quot;</title>
 
         <link href="resume_files/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
     <link href="resume_files/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
@@ -25,7 +25,6 @@
 
 <div id="aside" class="section level1">
 <h1>Aside</h1>
-<p><img src="beta_dist.png" alt="logo" style="width:100.0%" /></p>
 <div id="contact" class="section level2">
 <h2>Contact</h2>
 <ul>
@@ -45,22 +44,13 @@
 <li>Requirements Analysis</li>
 <li>Consulting</li>
 </ul>
-</div>
-<div id="open-source" class="section level2">
-<h2>Open Source Contributions</h2>
-<p>All projects available at <code>github.com/nstrayer/&lt;name&gt;</code></p>
-<ul>
-<li><code>shinysense</code>: R package to use sensor data in Shiny apps</li>
-<li><code>tuftesque</code>: Hugo theme (behind LiveFreeOrDichotomize.com)</li>
-<li><code>slid3r</code>: D3 add-on for fully svg slider inputs</li>
-</ul>
 <hr />
 </div>
 <div id="disclaimer" class="section level2">
 <h2>Disclaimer</h2>
 <p>Made w/ <a href="https://github.com/rstudio/pagedown"><strong>pagedown</strong></a>.</p>
 <p>Source code: <a href="https://github.com/nstrayer/cv">github.com/nstrayer/cv</a>.</p>
-<p>Last updated on 2019-10-11.</p>
+<p>Last updated on 2019-10-12.</p>
 </div>
 </div>
 <div id="main" class="section level1">
@@ -82,11 +72,21 @@
 </div>
 <div id="academic-achievements-projects" class="section level2" data-icon="suitcase">
 <h2>Academic Achievements &amp; Projects</h2>
+<div id="project-lead-project-ibis-puerto-rico-emergency-response-data-collection" class="section level3">
+<h3>Project Lead: Project IBIS: Puerto Rico Emergency Response Data Collection</h3>
+<p>Chicago, IL</p>
+<p>Loyola Quinlan School of Business</p>
+<p>19-Jul - Mar. 2019</p>
+<ul>
+<li>Consulted non-profits and FEMA representatives in Puerto Rico on data collection methods</li>
+<li>Led a team to conduct requirements analysis for an ArcGIS-powered application to locate and disperse emergency resources ahead of a natural disaster in Puerto Rico.</li>
+</ul>
+</div>
 <div id="participant-at-datafest-2017-competition" class="section level3">
 <h3>Participant at DataFest 2017 Competition</h3>
 <p>Chicago, IL</p>
 <p>Loyola University Chicago</p>
-<p>May 2017</p>
+<p>17-May</p>
 <ul>
 <li>Presented <U+0093>Are College Students as Lazy as We Think They Are?<U+0094>: An exploration of Expedia data to understand college students<U+0092> travel habits with SAS and Tableau</li>
 </ul>
@@ -95,20 +95,10 @@
 <h3>Author of “Effect of Voter Identification Laws on Voter Turnout and Democratic Party Victories”</h3>
 <p>Chicago, IL</p>
 <p>Loyola University Chicago</p>
-<p>May 2017 - Sept. 2015</p>
+<p>17-May - Sept. 2015</p>
 <ul>
 <li>Collected, cleaned, and analyzed social survey and legislative data in STATA and Tableau</li>
 <li>Presented at the 2016 and 2017 Midwest Political Science Association conference in Chicago, IL, and the 2017 Southern Political Science Association conference in New Orleans, LA</li>
-</ul>
-</div>
-<div id="project-lead-project-ibis-puerto-rico-emergency-response-data-collection" class="section level3">
-<h3>Project Lead: Project IBIS: Puerto Rico Emergency Response Data Collection</h3>
-<p>Chicago, IL</p>
-<p>Loyola Quinlan School of Business</p>
-<p>July 2019 - Mar. 2019</p>
-<ul>
-<li>Consulted non-profits and FEMA representatives in Puerto Rico on data collection methods</li>
-<li>Led a team to conduct requirements analysis for an ArcGIS-powered application to locate and disperse emergency resources ahead of a natural disaster in Puerto Rico.</li>
 </ul>
 </div>
 </div>
@@ -118,7 +108,7 @@
 <h3>Data Integration Analyst</h3>
 <p>Chicago, IL</p>
 <p>Strata Decision Technology</p>
-<p>Present - May 2018</p>
+<p>Present - 18-May</p>
 <ul>
 <li>Produce robust, tangible analytics solutions for end-users by serving as a trusted advisor for hospital C-Suite executives, Directors, and IT/ETL teams throughout the data integration project lifecycle</li>
 <li>Instruct clients on data best practices by leading trainings on data validation and data maintenance</li>
@@ -126,11 +116,20 @@
 <li>Advise team on strategies to automate data validation checks using Python pandas and SQL automation</li>
 </ul>
 </div>
+<div id="process-improvement-initiative" class="section level3">
+<h3>Process Improvement Initiative</h3>
+<p>Chicago, IL</p>
+<p>Strata Decision Technology</p>
+<p>Present - Jan. 2019</p>
+<ul>
+<li>Serve on 7-person team to reduce data validation timeline from 11 days to less than 5 days using SQL and Python automation</li>
+</ul>
+</div>
 <div id="board-member" class="section level3">
 <h3>Board Member</h3>
 <p>Chicago, IL</p>
 <p>R-Ladies Chicago</p>
-<p>Present - May 2019</p>
+<p>Present - 19-May</p>
 <ul>
 <li>Co-organizer for R-Ladies Chicago: A group dedicated to promoting gender diversity in the R programming and data science communities</li>
 <li>Organized 200+ person SatRdays conference in April 2019 at Roosevelt University in Chicago</li>
@@ -151,7 +150,7 @@
 <h3>Enterprise Resource Planning Data Conversion Project</h3>
 <p>Chicago, IL</p>
 <p>Strata Decision Technology</p>
-<p>April 2019 - Nov. 2018</p>
+<p>19-Apr - Nov. 2018</p>
 <ul>
 <li>Converted structure of 10,000,000 rows of data using SQL</li>
 <li>Converted client’s source system data in StrataJazz software amid ERP upgrade</li>
@@ -161,7 +160,7 @@
 <h3>Techncal Support Specialist</h3>
 <p>Chicago, IL</p>
 <p>United States District Court - Northern Distrinct of Illinois</p>
-<p>April 2018 - May 2017</p>
+<p>18-Apr - 17-May</p>
 <ul>
 <li>Translated industry-specific technical language into digestible and actionable information for end-users</li>
 <li>Collected and wrote technical requirements to bring 100+ user-specific workstations into production</li>
