Switched to the new all-one-pipe format for printing sections.

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ AWK
 <p>I have made visualizations viewed by hundreds of thousands of people<sup>1</sup>, sped up query times for 25 terabytes of data by an average of 4,800 times<sup>2</sup>, and built packages for R<sup>3</sup> that let you do magic<sup>4</sup>.</p>
 <p>Currently searching for a position that allows me to build tools leveraging a combination of visualization, machine learning, and software engineering to help people explore and understand their data in new and useful ways.</p>
 </div>
-<div id="education" class="section level2" data-icon="graduation-cap" data-concise="true">
+<div id="education" class="section level2" data-icon="graduation-cap">
 <h2>Education</h2>
 <div id="phd.-candidate-biostatistics" class="section level3">
 <h3>PhD. Candidate, Biostatistics</h3>
@@ -285,8 +285,8 @@ AWK
 </ul>
 </div>
 </div>
-<div id="selected-data-science-writing" class="section level2" data-icon="chart-line">
-<h2>Selected Data Science Writing</h2>
+<div id="data-science-writings" class="section level2" data-icon="chart-line">
+<h2>Data Science Writings</h2>
 <div class="aside">
 <p>I regularly blog about data science and visualization on my blog LiveFreeOrDichotomize.<sup>6</sup></p>
 </div>
@@ -382,7 +382,7 @@ AWK
 </ul>
 </div>
 </div>
-<div id="selected-press-by" class="section level2" data-icon="newspaper">
+<div id="selected-press-by" class="section level2" data-icon="book">
 <h2>Selected Press (By)</h2>
 <div id="the-great-student-migration17" class="section level3">
 <h3>The Great Student Migration<sup>17</sup></h3>
